# RAG2

./: AgentInstructions.txt  README.md  pyproject.toml
rag/: __init__.py  cli.py  compose.py  index.py
